@@ -1,5 +1,7 @@
 *SVN*
 
+* with_scope is protected.  #8524 [Josh Peek]
+
 * Quickref for association methods.  #7723 [marclove, Mindsweeper]
 
 * Calculations: return nil average instead of 0 when there are no rows to average.  #8298 [davidw]
